# pgors-protobuf

./: Cargo.toml  LICENSE  README.md
src/: POGOProtos_Data.rs  POGOProtos_Data_Battle.rs  POGOProtos_Data_Capture.rs  POGOProtos_Data_Gym.rs  POGOProtos_Data_Logs.rs  POGOProtos_Data_Player.rs  POGOProtos_Enums.rs  POGOProtos_Inventory.rs  POGOProtos_Inventory_Item.rs  POGOProtos_Map_Fort.rs  POGOProtos_Map_Pokemon.rs  POGOProtos_Networking_Envelopes.rs  POGOProtos_Networking_Requests_Messages.rs  POGOProtos_Networking_Responses.rs  POGOProtos_Settings.rs  POGOProtos_Settings_Master.rs  POGOProtos_Settings_Master_Item.rs  POGOProtos_Settings_Master_Pokemon.rs
